# daisys-mcp

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py  smithery.yaml
.github/workflows/: public-package.yml  test.yml
daisys_mcp/: __init__.py  http_tts.py  model.py  server.py  utils.py  websocket_tts.py
scripts/: build.py
tests/integration/: conftest.py  test_server.py
tests/unit/: test_io_operations.py
